// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalVoteModal /> should render correctly 1`] = `
<ProposalVoteModal__ProposalVoteModalContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  enforceFocus={false}
  keyboard={true}
  onHide={[Function]}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="global.vote.for"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Uncontrolled(Panel)
      bsStyle="primary"
      id="required-conditions"
    >
      <PanelHeading
        bsClass="panel"
        componentClass="div"
      >
        <FormattedMessage
          id="requirements"
          values={Object {}}
        />
         
      </PanelHeading>
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        <WYSIWYGRender
          value="We need to collect"
        />
        <Relay(Connect(ReduxForm))
          step={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "form": Object {
                "isProposalForm": true,
              },
              "id": "step1",
              "project": Object {
                "type": Object {
                  "title": "global.consultation",
                },
              },
              "requirements": Object {
                "reason": "We need to collect",
                "totalCount": 3,
                "viewerMeetsTheRequirements": false,
              },
              "viewerVotes": Object {
                "$fragmentRefs": null,
                "edges": Array [],
                "totalCount": 0,
              },
              "votesHelpText": "Help",
              "votesRanking": false,
            }
          }
        />
      </PanelBody>
    </Uncontrolled(Panel)>
    <Relay(Connect(VoteMinAlert))
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "form": Object {
            "isProposalForm": true,
          },
          "id": "step1",
          "project": Object {
            "type": Object {
              "title": "global.consultation",
            },
          },
          "requirements": Object {
            "reason": "We need to collect",
            "totalCount": 3,
            "viewerMeetsTheRequirements": false,
          },
          "viewerVotes": Object {
            "$fragmentRefs": null,
            "edges": Array [],
            "totalCount": 0,
          },
          "votesHelpText": "Help",
          "votesRanking": false,
        }
      }
      translationKey="votes-count"
    />
    <Relay(Connect(injectIntl(ReduxForm)))
      activeKeyboard={[Function]}
      disabledKeyboard={[Function]}
      onSubmit={[Function]}
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "form": Object {
            "isProposalForm": true,
          },
          "id": "step1",
          "project": Object {
            "type": Object {
              "title": "global.consultation",
            },
          },
          "requirements": Object {
            "reason": "We need to collect",
            "totalCount": 3,
            "viewerMeetsTheRequirements": false,
          },
          "viewerVotes": Object {
            "$fragmentRefs": null,
            "edges": Array [],
            "totalCount": 0,
          },
          "votesHelpText": "Help",
          "votesRanking": false,
        }
      }
      votes={
        Object {
          "$fragmentRefs": null,
          "edges": Array [],
          "totalCount": 0,
        }
      }
    />
    <div
      className="well mb-0 mt-15"
    >
      <p>
        <b>
          <FormattedMessage
            id="admin.fields.step.votesHelpText"
            values={Object {}}
          />
        </b>
      </p>
      <WYSIWYGRender
        value="Help"
      />
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      className="pull-right"
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      bsStyle="success"
      disabled={false}
      id="confirm-proposal-vote"
      isSubmitting={false}
      label="global.save"
      onSubmit={[Function]}
      style={
        Object {
          "marginLeft": "10px",
        }
      }
    />
  </ModalFooter>
</ProposalVoteModal__ProposalVoteModalContainer>
`;

exports[`<ProposalVoteModal /> should render correctly as Question 1`] = `
<ProposalVoteModal__ProposalVoteModalContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  enforceFocus={false}
  keyboard={true}
  onHide={[Function]}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="global.vote.for"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Uncontrolled(Panel)
      bsStyle="primary"
      id="required-conditions"
    >
      <PanelHeading
        bsClass="panel"
        componentClass="div"
      >
        <FormattedMessage
          id="requirements"
          values={Object {}}
        />
         
      </PanelHeading>
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        <WYSIWYGRender
          value="We need to collect"
        />
        <Relay(Connect(ReduxForm))
          step={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "form": Object {
                "isProposalForm": false,
              },
              "id": "step1",
              "project": Object {
                "type": Object {
                  "title": "global.consultation",
                },
              },
              "requirements": Object {
                "reason": "We need to collect",
                "totalCount": 3,
                "viewerMeetsTheRequirements": false,
              },
              "viewerVotes": Object {
                "$fragmentRefs": null,
                "edges": Array [],
                "totalCount": 0,
              },
              "votesHelpText": "Help",
              "votesRanking": false,
            }
          }
        />
      </PanelBody>
    </Uncontrolled(Panel)>
    <Relay(Connect(VoteMinAlert))
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "form": Object {
            "isProposalForm": false,
          },
          "id": "step1",
          "project": Object {
            "type": Object {
              "title": "global.consultation",
            },
          },
          "requirements": Object {
            "reason": "We need to collect",
            "totalCount": 3,
            "viewerMeetsTheRequirements": false,
          },
          "viewerVotes": Object {
            "$fragmentRefs": null,
            "edges": Array [],
            "totalCount": 0,
          },
          "votesHelpText": "Help",
          "votesRanking": false,
        }
      }
      translationKey="count-questions"
    />
    <Relay(Connect(injectIntl(ReduxForm)))
      activeKeyboard={[Function]}
      disabledKeyboard={[Function]}
      onSubmit={[Function]}
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "form": Object {
            "isProposalForm": false,
          },
          "id": "step1",
          "project": Object {
            "type": Object {
              "title": "global.consultation",
            },
          },
          "requirements": Object {
            "reason": "We need to collect",
            "totalCount": 3,
            "viewerMeetsTheRequirements": false,
          },
          "viewerVotes": Object {
            "$fragmentRefs": null,
            "edges": Array [],
            "totalCount": 0,
          },
          "votesHelpText": "Help",
          "votesRanking": false,
        }
      }
      votes={
        Object {
          "$fragmentRefs": null,
          "edges": Array [],
          "totalCount": 0,
        }
      }
    />
    <div
      className="well mb-0 mt-15"
    >
      <p>
        <b>
          <FormattedMessage
            id="admin.fields.step.votesHelpText"
            values={Object {}}
          />
        </b>
      </p>
      <WYSIWYGRender
        value="Help"
      />
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      className="pull-right"
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      bsStyle="success"
      disabled={false}
      id="confirm-proposal-vote"
      isSubmitting={false}
      label="global.save"
      onSubmit={[Function]}
      style={
        Object {
          "marginLeft": "10px",
        }
      }
    />
  </ModalFooter>
</ProposalVoteModal__ProposalVoteModalContainer>
`;

exports[`<ProposalVoteModal /> should render correctly with interpellation 1`] = `
<ProposalVoteModal__ProposalVoteModalContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  enforceFocus={false}
  keyboard={true}
  onHide={[Function]}
  role="dialog"
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <FormattedMessage
        id="global.support.for"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Uncontrolled(Panel)
      bsStyle="primary"
      id="required-conditions"
    >
      <PanelHeading
        bsClass="panel"
        componentClass="div"
      >
        <FormattedMessage
          id="requirements"
          values={Object {}}
        />
         
      </PanelHeading>
      <PanelBody
        bsClass="panel"
        collapsible={false}
      >
        <WYSIWYGRender
          value="We need to collect"
        />
        <Relay(Connect(ReduxForm))
          step={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "form": Object {
                "isProposalForm": true,
              },
              "id": "step1",
              "project": Object {
                "type": Object {
                  "title": "project.types.interpellation",
                },
              },
              "requirements": Object {
                "reason": "We need to collect",
                "totalCount": 3,
                "viewerMeetsTheRequirements": false,
              },
              "viewerVotes": Object {
                "$fragmentRefs": null,
                "edges": Array [],
                "totalCount": 0,
              },
              "votesHelpText": "Help",
              "votesRanking": false,
            }
          }
        />
      </PanelBody>
    </Uncontrolled(Panel)>
    <Relay(Connect(VoteMinAlert))
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "form": Object {
            "isProposalForm": true,
          },
          "id": "step1",
          "project": Object {
            "type": Object {
              "title": "project.types.interpellation",
            },
          },
          "requirements": Object {
            "reason": "We need to collect",
            "totalCount": 3,
            "viewerMeetsTheRequirements": false,
          },
          "viewerVotes": Object {
            "$fragmentRefs": null,
            "edges": Array [],
            "totalCount": 0,
          },
          "votesHelpText": "Help",
          "votesRanking": false,
        }
      }
      translationKey="interpellation.support.count"
    />
    <Relay(Connect(injectIntl(ReduxForm)))
      activeKeyboard={[Function]}
      disabledKeyboard={[Function]}
      onSubmit={[Function]}
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "form": Object {
            "isProposalForm": true,
          },
          "id": "step1",
          "project": Object {
            "type": Object {
              "title": "project.types.interpellation",
            },
          },
          "requirements": Object {
            "reason": "We need to collect",
            "totalCount": 3,
            "viewerMeetsTheRequirements": false,
          },
          "viewerVotes": Object {
            "$fragmentRefs": null,
            "edges": Array [],
            "totalCount": 0,
          },
          "votesHelpText": "Help",
          "votesRanking": false,
        }
      }
      votes={
        Object {
          "$fragmentRefs": null,
          "edges": Array [],
          "totalCount": 0,
        }
      }
    />
    <div
      className="well mb-0 mt-15"
    >
      <p>
        <b>
          <FormattedMessage
            id="admin.fields.step.supportsHelpText"
            values={Object {}}
          />
        </b>
      </p>
      <WYSIWYGRender
        value="Help"
      />
    </div>
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      className="pull-right"
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      bsStyle="success"
      disabled={false}
      id="confirm-proposal-vote"
      isSubmitting={false}
      label="global.save"
      onSubmit={[Function]}
      style={
        Object {
          "marginLeft": "10px",
        }
      }
    />
  </ModalFooter>
</ProposalVoteModal__ProposalVoteModalContainer>
`;
